# recipebox_pkg

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
Example/: Package_Usage.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: modules.rst  recipebox_pkg.rst
src/recipebox_pkg/: Untitled.ipynb  __init__.py  id_search.py  nutr_search.py
tests/: fetch_recipe.py  ing_search.py  test_fetch_recipe.py  test_id_search.py  test_recipebox_pkg.py
