[tool.poetry]
name = "recipebox_pkg"
version = "0.1.0"
description = "A Python package designed for fetching information about recipes."
authors = ["Yuchen An"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
pytest = "^7.4.3"
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
